test: replace get(0) by getFirst() and get(n) by getLast()